Import patches-unapplied version 1:5.10.1-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: ad8680f713b52fd0d0220f7df0197b02f287ff76

New changelog entries:
  * New upstream release
  * d/p/0001-fix-build-with-UPower-but-no-NM-or-ConnMan.patch:
    + Removed, merged upstream

--- a/config.h.in
+++ b/config.h.in
@@ -15,6 +15,9 @@
 /* Define whether gnome-keyring support is enabled */
 #undef ENABLE_GNOME_KEYRING
 
+/* Make tests installable */
+#undef ENABLE_INSTALLED_TESTS
+
 /* Define if libaccounts SSO support is required */
 #undef ENABLE_LIBACCOUNTS_SSO
 
