Import patches-unapplied version 1:5.10.1-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 3c5b52dad7d1f6c140809de3ab64899ff35bbf72

New changelog entries:
  * debian/control: Update Vcs-* fields
  * debian/telepathy-mission-control-5.install: Install GSettings schema file
    (Closes: #657057)
  * debian/rules: List files that are not installed in packages

--- a/debian/control
+++ b/debian/control
@@ -20,8 +20,8 @@ Build-Depends: autotools-dev (>= 20100122-1~),
                python (>= 2.5),
                xsltproc
 Standards-Version: 3.9.2
-Vcs-Git: git://git.debian.org/git/pkg-telepathy/telepathy-mission-control-5.git
-Vcs-Browser: http://git.debian.org/?p=pkg-telepathy/telepathy-mission-control-5.git
+Vcs-Git: git://anonscm.debian.org/git/pkg-telepathy/telepathy-mission-control-5.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-telepathy/telepathy-mission-control-5.git;a=summary
 Homepage: http://telepathy.freedesktop.org/wiki/
 
 Package: telepathy-mission-control-5
