--- a/debian/rules
+++ b/debian/rules
@@ -39,6 +39,9 @@ override_dh_auto_test:
 override_dh_auto_configure:
 	dh_auto_configure -- ${CONFIGURE_FLAGS}
 
+override_dh_install:
+	dh_install --list-missing
+
 # we symlink some of the doc directories together
 override_dh_installdocs:
 	dh_installdocs -ptelepathy-mission-control-5-dbg \
