Import patches-unapplied version 1:5.11.0-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 5045aad8a525bfb7f6aa0ac4e4858424b1562412

New changelog entries:
  * New upstream development release
    - require telepathy-glib 0.17.5

--- a/config.h.in
+++ b/config.h.in
@@ -12,6 +12,9 @@
 /* Define if Aegis is supported */
 #undef ENABLE_AEGIS
 
+/* Define to use the "use-conn" GSetting */
+#undef ENABLE_CONN_SETTING
+
 /* Define whether gnome-keyring support is enabled */
 #undef ENABLE_GNOME_KEYRING
 
