--- a/debian/control
+++ b/debian/control
@@ -7,11 +7,12 @@ Uploaders: Simon McVittie <smcv@debian.org>,
            Sjoerd Simons <sjoerd@debian.org>,
            Laurent Bigonville <bigon@debian.org>
 Build-Depends: autotools-dev (>= 20100122-1~),
-               debhelper (>= 8),
+               debhelper (>= 9),
+               dpkg-dev (>= 1.16.1~),
                gtk-doc-tools,
                libdbus-1-dev (>= 1.0),
                libdbus-glib-1-dev (>= 0.82),
-               libglib2.0-dev (>= 2.28),
+               libglib2.0-dev (>= 2.30),
                libgnome-keyring-dev,
                libtelepathy-glib-dev (>= 0.17.5),
                libupower-glib-dev,
@@ -19,7 +20,7 @@ Build-Depends: autotools-dev (>= 20100122-1~),
                pkg-config (>= 0.21),
                python (>= 2.5),
                xsltproc
-Standards-Version: 3.9.2
+Standards-Version: 3.9.3
 Vcs-Git: git://anonscm.debian.org/git/pkg-telepathy/telepathy-mission-control-5.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-telepathy/telepathy-mission-control-5.git;a=summary
 Homepage: http://telepathy.freedesktop.org/wiki/
