Import patches-unapplied version 1:5.12.0-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 4120cc6b4901b3b541820f3d88aff2f7c3a651fd

New changelog entries:
  * Merge from experimental into unstable
  * Add NEWS.Debian for the butterfly -> haze migration
  * Suggest telepathy-haze

--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,7 @@ Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libmission-control-plugins0 (= ${binary:Version})
+Suggests: telepathy-haze
 Conflicts: telepathy-mission-control
 Description: management daemon for Telepathy real-time communication framework
  Telepathy Mission Control 5 is an account manager and channel dispatcher for
